--- a/look.gemspec.erb
+++ b/look.gemspec.erb
@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
   s.homepage          = "http://github.com/soveran/look"
   s.files = <%= Dir[
     "LICENSE",
-    "README.markdown",
+    "README.md",
     "Rakefile",
     "lib/**/*.rb",
     "*.gemspec",
